FIX - Overflow issues with setting modal

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -89,6 +89,9 @@ p {
 button {
     cursor: pointer;
 }
+input {
+    min-width: 0;
+}
 
 
 .flex-flow {
